  following symlinks or via multiple arguments.

  du -H and -L now consistently count pointed-to files instead of
  symbolic links, and correctly diagnose dangling symlinks.

  du --ignore=D now ignores directory D even when that directory is
  found to be part of a directory cycle.  Before, du would issue a
  "NOTIFY YOUR SYSTEM MANAGER" diagnostic and fail.

  tac would perform a double-free when given an input line longer than 16KiB.
  [bug introduced in coreutils-8.3]

  tr now consistently handles case conversion character classes.
  In some locales, valid conversion specifications caused tr to abort,
  while in all locales, some invalid specifications were undiagnosed.
  [bugs introduced in coreutils 6.9.90 and 6.9.92]

** New features

  cp now accepts the --attributes-only option to not copy file data,
  which is useful for efficiently modifying files.

  du recognizes -d N as equivalent to --max-depth=N, for compatibility
  with FreeBSD.

  sort now accepts the --debug option, to highlight the part of the
  line significant in the sort, and warn about questionable options.

  sort now supports -d, -f, -i, -R, and -V in any combination.

  stat now accepts the %m format directive to output the mount point
  for a file.  It also accepts the %w and %W format directives for
  outputting the birth time of a file, if one is available.

** Changes in behavior

  df now consistently prints the device name for a bind mounted file,
  rather than its aliased target.

  du now uses less than half as much memory when operating on trees
  with many hard-linked files.  With --count-links (-l), or when
  operating on trees with no hard-linked files, there is no change.

  ls -l now uses the traditional three field time style rather than
  the wider two field numeric ISO style, in locales where a style has
  not been specified.  The new approach has nicer behavior in some
  locales, including English, which was judged to outweigh the disadvantage