@@ -64,5 +64,11 @@ split: line count option -99*... is too large
 EOF
 compare out exp || fail=1
 
+# Make sure split fails when it can't read input
+# (the current directory in this case)
+if ! cat . >/dev/null; then
+  # can't read() directories
+  split . && fail=1
+fi
 
 Exit $fail
